--- a/Document/策划案.md
+++ b/Document/策划案.md
@@ -74,3 +74,90 @@ ubble”在语义上可以指代多种概念，具体取决于上下文。以下
 在物理学中，可能指代宇宙学中的“泡泡宇宙”理论，或其他科学现象中的气泡结构。
 
 这些语义指代展示了“bubble”在不同领域和上下文中的多样性。如果你有特定的领域或上下文，可以更详细地探讨其含义
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 《气泡迷因》策划案
+
+
+
+## 一句话说明
+
+1. 本游戏是烂梗模拟器，主要为了讽刺娱乐至死，解构一切的模因社会。
+
+## 玩法
+
+1. 玩家需要拖动气泡到所有“能联想到”气泡的物体上。然后制造meme
+   1. 比如圆形的东西可以联想为气泡
+   2. 容易爆炸的物体可以联想为气泡
+   3. 答题卡
+   4. 泡泡纸
+   5. 等等，，，，
+2. meme的范围会越来越大，直到游戏结束，把社会终结的句号也变为气泡。
+
+### 音效需求
+
+|              | 感受                             | 用处                                               |
+| ------------ | -------------------------------- | -------------------------------------------------- |
+| 罐头笑       | 让人听上去不舒服，很像预制人     | 每次玩家把气泡拖动到正确位置，会有笑声。           |
+| 气泡爆炸声： | 听上去轻飘飘，清脆，没什么大不了 | 在玩家把世界都气泡化之后，气泡会炸裂。需要这个声音 |
+|              |                                  |                                                    |
+
+
+
+
+
+
+
+
+
+
+
+
+
